Adicionando endpoint de login de instrutor para conseguir o token
